Fixed breadcrumbs flat on dark mode

--- a/sass/components/_dark-mode.scss
+++ b/sass/components/_dark-mode.scss
@@ -84,6 +84,12 @@
         }
         &.flat {
             background-color: transparent;
+            .breadcrumb {
+                color: rgba(255, 255, 255, .5);
+                &:before {
+                    color: rgba(255, 255, 255, .5);
+                }
+            }
         }
     }
     //collapsible
